--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,5 +2,6 @@ ch.eventsourced {
   aggregate-subscription {
     retries-until-restart = 5
     retry-interval = "3s"
+    max-buffered-messages = 2000
   }
 }
