Implement snapshots for AggregateSubscription.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,5 +3,6 @@ ch.eventsourced {
     retries-until-restart = 5
     retry-interval = "3s"
     max-buffered-messages = 2000
+    snapshot-interval = 1000
   }
 }
