--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,4 +5,9 @@ ch.eventsourced {
     max-buffered-messages = 2000
     snapshot-interval = 1000
   }
+  sharding.local {
+    cleanness-tracker {
+      snapshot-interval = 1000
+    }
+  }
 }
